[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "OrcFxAPI"
version = "0.0.1"
authors = [
  { name="Anna", email="aff@4subsea.com" },
]
description = "An empty package to mock OrcFxAPI package"
readme = "README.md"
requires-python = ">=3.7"
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
]

